# macos-notifications

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: mkdocs-requirements.txt
.github/workflows/: deploy-pypi.yml  latest-changes.yml  publish-docs.yml  validate.yml
code/client/: index.html
code/listener_process/: index.html
code/manager/: index.html
code/notification_config/: index.html
code/notification_sender/: index.html
code/singleton/: index.html
docs/: examples.md  faq.md  index.md  release-notes.md  user_guide.md
docs/code/: client.md  listener_process.md  manager.md  notification_config.md  notification_manager.md  notification_sender.md  singleton.md
examples/: cancel_multiple_notifications.py  index.html  multiple_notifications_with_callbacks.py  notification_with_action.py  notification_with_reply.py  notification_with_zoom_action.py  simple_notification.py
faq/: index.html
release-notes/: index.html
search/: search_index.json
src/mac_notifications/: README.md  __init__.py  client.py  listener_process.py  manager.py  notification_config.py  notification_manager.py  notification_process.py  notification_sender.py  singleton.py
user_guide/: index.html
